tools/tests/errors/surf_arity_04.experr
got multiple values for argument 'a'
